--- a/src/main/resources/templates/filmSessions/schedule.html
+++ b/src/main/resources/templates/filmSessions/schedule.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
 
-    <title>Кинотеатр!</title>
+    <title>Расписание сеансов</title>
 </head>
 <body>
 <div class="container-fluid p-0">
@@ -18,7 +18,7 @@
             <a class="navbar-brand" href="/">Job4jCinema</a>
             <div class="collapse navbar-collapse">
                 <div class="navbar-nav me-auto">
-                    <a class="nav-item nav-link" th:href="@{/filmSessions}">Расписание сеансов</a>
+                    <a class="nav-item nav-link active" th:href="@{/filmSessions}">Расписание сеансов</a>
                     <a class="nav-item nav-link" th:href="@{/films}">Фильмы</a>
                 </div>
                 <div class="d-flex" th:if="${user.fullName == 'Гость'}">
@@ -32,12 +32,31 @@
             </div>
         </div>
     </nav>
-    <div class="container mt-2">
-        <h3>Проект job4j_cinema, выполняемый в рамках курса Job4j</h3>
-        <ul>
-            <li><a th:href="@{/filmSessions}">Расписание сеансов</a></li>
-            <li><a th:href="@{/films}">Фильмы</a></li>
-        </ul>
+    <div class="container">
+        <div class="row">
+            <table class="table">
+                <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Название фильма</th>
+                    <th scope="col">Зал</th>
+                    <th scope="col">Время начала</th>
+                    <th scope="col">Время окончания</th>
+                    <th scope="col">Стоимость</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="filmSession: ${filmSessions}">
+                    <td th:text="${filmSession.id}" />
+                    <td><a th:text="${filmSession.filmName}" th:href="@{/tickets/{filmSessionId}(filmSessionId=${filmSession.id})}"></a></td>
+                    <td th:text="${filmSession.hallsName}" />
+                    <td th:text="${#temporals.format(filmSession.startTime, 'dd-MM-yyyy HH:mm')}"/>
+                    <td th:text="${#temporals.format(filmSession.endTime, 'dd-MM-yyyy HH:mm')}"/>
+                    <td th:text="${filmSession.price}" />
+                </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
 </body>
