--- a/src/main/resources/templates/films/list.html
+++ b/src/main/resources/templates/films/list.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
 
-    <title>Кинотеатр!</title>
+    <title>Расписание сеансов</title>
 </head>
 <body>
 <div class="container-fluid p-0">
@@ -19,7 +19,7 @@
             <div class="collapse navbar-collapse">
                 <div class="navbar-nav me-auto">
                     <a class="nav-item nav-link" th:href="@{/filmSessions}">Расписание сеансов</a>
-                    <a class="nav-item nav-link" th:href="@{/films}">Фильмы</a>
+                    <a class="nav-item nav-link active" th:href="@{/films}">Фильмы</a>
                 </div>
                 <div class="d-flex" th:if="${user.fullName == 'Гость'}">
                     <a class="nav-link text-secondary me-3" th:href="@{/users/register}">Регистрация</a>
@@ -32,12 +32,39 @@
             </div>
         </div>
     </nav>
-    <div class="container mt-2">
-        <h3>Проект job4j_cinema, выполняемый в рамках курса Job4j</h3>
-        <ul>
-            <li><a th:href="@{/filmSessions}">Расписание сеансов</a></li>
-            <li><a th:href="@{/films}">Фильмы</a></li>
-        </ul>
+
+    <div class="container">
+        <form class="mt-3" enctype="multipart/form-data">
+            <div class="row">
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th scope="col">Обложка</th>
+                        <th scope="col">Название фильма</th>
+                        <th scope="col">Описание</th>
+                        <th scope="col">Год выпуска</th>
+                        <th scope="col">Жанр</th>
+                        <th scope="col">Возрастное ограничение</th>
+                        <th scope="col">Продолжительность</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="film: ${films}">
+                        <td>
+                            <img th:src="@{/files/{fileId}(fileId=${film.fileId})}" class="w-100"
+                                 alt="No image">
+                        </td>
+                        <td th:text="${film.name}" />
+                        <td th:text="${film.description}" />
+                        <td th:text="${film.year}" />
+                        <td th:text="${film.genre}" />
+                        <td th:text="${film.minimalAge}" />
+                        <td th:text="${film.durationInMinutes}" />
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </form>
     </div>
 </div>
 </body>
