--- a/src/main/resources/templates/tickets/success.html
+++ b/src/main/resources/templates/tickets/success.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
 
-    <title>Кинотеатр!</title>
+    <title>Бронирование билета</title>
 </head>
 <body>
 <div class="container-fluid p-0">
@@ -32,13 +32,9 @@
             </div>
         </div>
     </nav>
-    <div class="container mt-2">
-        <h3>Проект job4j_cinema, выполняемый в рамках курса Job4j</h3>
-        <ul>
-            <li><a th:href="@{/filmSessions}">Расписание сеансов</a></li>
-            <li><a th:href="@{/films}">Фильмы</a></li>
-        </ul>
+    <div class="container">
+        <h3 class="mt-3">Успешное бронирование</h3>
+        <p class="text-danger" th:text="${message}"></p>
     </div>
 </div>
 </body>
-</html>
