--- a/src/main/resources/templates/users/register.html
+++ b/src/main/resources/templates/users/register.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
 
-    <title>Кинотеатр!</title>
+    <title>Регистрация</title>
 </head>
 <body>
 <div class="container-fluid p-0">
@@ -21,23 +21,38 @@
                     <a class="nav-item nav-link" th:href="@{/filmSessions}">Расписание сеансов</a>
                     <a class="nav-item nav-link" th:href="@{/films}">Фильмы</a>
                 </div>
-                <div class="d-flex" th:if="${user.fullName == 'Гость'}">
+                <div class="d-flex">
                     <a class="nav-link text-secondary me-3" th:href="@{/users/register}">Регистрация</a>
                     <a class="nav-link text-secondary" th:href="@{/users/login}">Войти</a>
-                </div>
-                <div class="d-flex" th:if="${user.fullName != 'Гость'}">
-                    <a class="nav-link text-secondary me-3" href="#" th:text="${user.fullName}"></a>
-                    <a class="nav-link text-secondary" th:href="@{/users/logout}">Выйти</a>
                 </div>
             </div>
         </div>
     </nav>
-    <div class="container mt-2">
-        <h3>Проект job4j_cinema, выполняемый в рамках курса Job4j</h3>
-        <ul>
-            <li><a th:href="@{/filmSessions}">Расписание сеансов</a></li>
-            <li><a th:href="@{/films}">Фильмы</a></li>
-        </ul>
+    <div class="container">
+        <form class="mt-3" th:action="@{/users/register}" method="post">
+            <div class="mb-3">
+                <label for="full_name" class="form-label"><b>Имя</b></label>
+                <input type="text" class="form-control" id="full_name" name="full_name" placeholder="Иван" required>
+            </div>
+            <div class="mb-3">
+                <label for="email" class="form-label"><b>Почта</b></label>
+                <input type="email" class="form-control" id="email" name="email" placeholder="ivan@mail.ru" required>
+            </div>
+            <div class="mb-3">
+                <label for="password" class="form-label"><b>Пароль</b></label>
+                <input type="password" class="form-control" id="password" name="password" required>
+            </div>
+            <div class="mb-3 row">
+                <div class="col-6"></div>
+                <div class="col-6">
+                    <div class="row">
+                        <div class="col-6"><a class="btn btn-danger w-100" th:href="@{/filmSessions}">Отмена</a></div>
+                        <div class="col-6"><button class="btn btn-primary w-100" type="submit">Сохранить</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </form>
     </div>
 </div>
 </body>
