--- a/src/main/resources/templates/users/register.html
+++ b/src/main/resources/templates/users/register.html
@@ -31,8 +31,8 @@
     <div class="container">
         <form class="mt-3" th:action="@{/users/register}" method="post">
             <div class="mb-3">
-                <label for="full_name" class="form-label"><b>Имя</b></label>
-                <input type="text" class="form-control" id="full_name" name="full_name" placeholder="Иван" required>
+                <label for="fullName" class="form-label"><b>Имя</b></label>
+                <input type="text" class="form-control" id="fullName" name="fullName" placeholder="Иван" required>
             </div>
             <div class="mb-3">
                 <label for="email" class="form-label"><b>Почта</b></label>
